# rpi_client

./: .gitignore  CONTRIBUTING.md  README.md  rpiclient-gtk.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rpi_client_gtk_c_checker.yml
docs/: make.bat
docs/source/: conf.py  index.rst
rpiclient/: INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.guess  config.h  config.status  config.sub  configure  configure.ac  install-sh  libtool
rpiclient/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
rpiclient/po/: Makefile  Makefile.am  Makefile.in
rpiclient/rc/: Makefile.am
rpiclient/rc/config/: Makefile.am
rpiclient/rc/images/: Makefile.am
rpiclient/src/: Makefile  Makefile.am  Makefile.in  aboutdialog.c  aboutdialog.h  config.h  controlexit.c  controlexit.h  cpixbuf.c  entryaddress.c  entryaddress.h  entryport.c  entryport.h  exitdialog.c  exitdialog.h  gthreadparameters.h  hboxsettings.c  hboxsettings.h  helpwindow.c  helpwindow.h  imageslider.c  imageslider.h  infodialog.c  infodialog.h  main.c  readsocket.c  resource.h  rpi_config.h  rpiabout.c  rpiabout.h  rpichannelget.c  rpichannelget.h  rpichannelset.c  rpichannelset.h  rpiclient.c  rpiclient.h  rpiclient_about_signal_connect.c  rpiclient_channel_signal_connect.c  rpiclient_connect_signal_connect.c  rpiclient_diconnect_signal_connect.c  (+57 more)
rpiclient/src/.deps/: aboutDialog.Po  aboutdialog.Po  controlexit.Po  cpixbuf.Po  entryaddress.Po  entryport.Po  exitDialog.Po  exitQuestion.Po  exitdialog.Po  hboxsettings.Po  helpWindow.Po  helpwindow.Po  imageSlider.Po  imageslider.Po  infoDialog.Po  infodialog.Po  main.Po  makePath.Po  mergeStr.Po  readSocket.Po  readsocket.Po  rpiDecrypt.Po  rpiEncrypt.Po  rpiabout.Po  rpichannelget.Po  rpichannelset.Po  rpiclient.Po  rpiconnect.Po  rpidecrypt.Po  rpidisconnect.Po  rpiencrypt.Po  rpifile.Po  rpifilemenu.Po  rpifixedget.Po  rpifixedset.Po  rpiformat.Po  rpiframeget.Po  rpiframeset.Po  rpiframetop.Po  rpihelp.Po  (+21 more)
rpiclient/src/about/: about_dialog.c  about_dialog.h  rpi_about_dialog.c  rpi_about_dialog.h
rpiclient/src/config/: gtk_rpi_config.h  sc1.config
rpiclient/src/encrypt/: rpi_decrypt.c  rpi_encrypt.c  rpi_format.h  rpidecrypt.c  rpiencrypt.c  rpiformat.h
rpiclient/src/exit/: exit_dialog.c  exit_dialog.h  rpi_exit_dialog.c  rpi_exit_dialog.h
rpiclient/src/format/: rpi_format.c  rpi_format.h
rpiclient/src/help/: help_window.c  help_window.h  image_slider.c  image_slider.h  rpi_help_window.c  rpi_help_window.h  rpi_image_slider.c  rpi_image_slider.h
rpiclient/src/home/: channel_control.c  channel_control.h  channel_status.c  channel_status.h  home.c  home.h  home_frame.c  home_frame.h  menu_bar.c  menu_bar.h  read_socket.c  rpi_channel_control.c  rpi_channel_control.h  rpi_channel_status.c  rpi_channel_status.h  rpi_home.c  rpi_home.h  rpi_home_frame.c  rpi_home_frame.h  rpi_menu.c  rpi_menu.h  rpiclient_about_signal_connect.c  rpiclient_channel_signal_connect.c  rpiclient_connect_signal_connect.c  rpiclient_diconnect_signal_connect.c  rpiclient_gpio_signal_connect.c  rpiclient_help_signal_connect.c  rpiclient_scale_signal_connect.c  rpiclient_send_signal_connect.c  rpiclient_settings_signal_connect.c  rpiclient_spinbutton_signal_connect.c  rpiclient_vbar_signal_connect.c
rpiclient/src/info/: info_dialog.c  info_dialog.h  rpi_info_dialog.c  rpi_info_dialog.h
rpiclient/src/misc/: rpi_dialog_misc.c  rpi_dialog_misc.h  rpi_misc.c  rpi_misc.h
rpiclient/src/resource/: cpixbuf.c  get_config_dir.c  get_config_file.c  get_resource_dir.c  get_resource_file.c  resource.h  rpi_cpixbuf.c  rpi_get_config_dir.c  rpi_get_config_file.c  rpi_get_config_file_path.c  rpi_get_resource_dir.c  rpi_get_resource_file.c  rpi_get_resource_file_path.c  rpi_resource.h
rpiclient/src/rpi_format/: rpi_format.c
rpiclient/src/settings/: gthread_parameters.h  rpi_client_config.h  rpi_gthread_parameters.h  rpi_server_parameters.h  rpi_settings.h  rpi_settings_config.c  rpi_settings_config.h  rpi_settings_general_window.c  rpi_settings_general_window.h  rpi_settings_network_window.c  rpi_settings_network_window.h  rpi_settings_plain.c  rpi_settings_plain.h  rpi_settings_sqlite.c  rpi_settings_sqlite.h  rpi_settings_user.c  rpi_settings_user.h  server_parameters.h  settings_config.c  settings_config.h  settings_free.c  settings_general_window.c  settings_general_window.h  settings_network_window.c  settings_network_window.h  settings_read.c  settings_window.c  settings_window.h  settings_write.c
rpiclient/src/warning/: rpi_warning_dialog.c  rpi_warning_dialog.h  warning_dialog.c  warning_dialog.h
rpiclient/src/widgets/: rpi_vertical_bar.c  rpi_vertical_bar.h  vertical_bar.c  vertical_bar.h
