##
## @info   gengtkpro ver.1.0
## @author Vladimir Roncevic <elektron.ronca@gmail.com>
## @brief  Process this file with automake to produce Makefile.in
##

SUBDIRS = .

DOMAIN = rpiclient
LINGUAS = en
GETTEXT_PACKAGE = $(DOMAIN)

DISTFILES = \
	ChangeLog \
	LINGUAS \
	POTFILES.in \
	$(LINGUAS:=.po)

include $(top_srcdir)/gettext.m4
